--- a/Capstone/src/DashboardPanel.form
+++ b/Capstone/src/DashboardPanel.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="DashboardPanel">
-  <grid id="82525" binding="contentPane" layout-manager="BorderLayout" hgap="0" vgap="0">
+  <grid id="82525" binding="dashboardPanel" layout-manager="BorderLayout" hgap="0" vgap="0">
     <constraints>
       <xy x="20" y="20" width="1024" height="625"/>
     </constraints>
@@ -222,7 +222,7 @@
               <text value="Enter Item ID:"/>
             </properties>
           </component>
-          <component id="607ae" class="javax.swing.JTextField" binding="itemIDField">
+          <component id="607ae" class="javax.swing.JTextField" binding="itemIDField" custom-create="true">
             <constraints>
               <grid row="4" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -269,7 +269,7 @@
               </grid>
             </constraints>
           </vspacer>
-          <component id="368ef" class="javax.swing.JButton" binding="findItemButton" default-binding="true">
+          <component id="368ef" class="javax.swing.JButton" binding="findItemButton" custom-create="true" default-binding="true">
             <constraints>
               <grid row="5" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -278,7 +278,7 @@
               <text value="Find Item"/>
             </properties>
           </component>
-          <component id="c80c4" class="javax.swing.JButton" binding="sellItemButton">
+          <component id="c80c4" class="javax.swing.JButton" binding="sellItemButton" custom-create="true">
             <constraints>
               <grid row="10" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -333,7 +333,7 @@
               <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
             </constraints>
           </vspacer>
-          <component id="e1abf" class="javax.swing.JTable" binding="itemsDue">
+          <component id="e1abf" class="javax.swing.JTable" binding="itemsDue" custom-create="true">
             <constraints>
               <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="50"/>
@@ -353,7 +353,7 @@
               <text value="Recent Transactions"/>
             </properties>
           </component>
-          <component id="264cb" class="javax.swing.JTable" binding="transactions">
+          <component id="264cb" class="javax.swing.JTable" binding="transactions" custom-create="true">
             <constraints>
               <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="50"/>
