Add perishable column, change return date to days to sell, tidy up code

--- a/Capstone/src/AddItemDialog.form
+++ b/Capstone/src/AddItemDialog.form
@@ -126,7 +126,7 @@
             </constraints>
             <properties/>
           </component>
-          <component id="5fb5f" class="javax.swing.JTextField" binding="dateRecievedField">
+          <component id="5fb5f" class="javax.swing.JTextField" binding="dateReceivedField">
             <constraints>
               <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -147,10 +147,10 @@
               <grid row="7" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Return Date:"/>
+              <text value="Days to Sell"/>
             </properties>
           </component>
-          <component id="17be4" class="javax.swing.JTextField" binding="returnDateField">
+          <component id="17be4" class="javax.swing.JTextField" binding="daysToSellField">
             <constraints>
               <grid row="7" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
