--- a/Capstone/src/InventoryPanel.form
+++ b/Capstone/src/InventoryPanel.form
@@ -103,7 +103,7 @@
           <text value="Add Item"/>
         </properties>
       </component>
-      <component id="7909f" class="javax.swing.JLabel" binding="EMPTY_SPACE">
+      <component id="7909f" class="javax.swing.JLabel">
         <constraints>
           <grid row="3" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -111,7 +111,7 @@
           <text value=" "/>
         </properties>
       </component>
-      <component id="b63e1" class="javax.swing.JLabel" binding="EMPTY_SPACE2">
+      <component id="b63e1" class="javax.swing.JLabel">
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
