--- a/Capstone/src/DashboardPanel.form
+++ b/Capstone/src/DashboardPanel.form
@@ -2,7 +2,7 @@
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="DashboardPanel">
   <grid id="82525" binding="dashboardPanel" layout-manager="BorderLayout" hgap="0" vgap="0">
     <constraints>
-      <xy x="20" y="20" width="1024" height="625"/>
+      <xy x="20" y="20" width="1295" height="625"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -348,17 +348,6 @@
               <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
             </constraints>
           </vspacer>
-          <component id="e1abf" class="javax.swing.JTable" binding="itemsDue" custom-create="true">
-            <constraints>
-              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="50"/>
-              </grid>
-            </constraints>
-            <properties>
-              <fillsViewportHeight value="false"/>
-              <gridColor color="-16777216"/>
-            </properties>
-          </component>
           <component id="5de76" class="javax.swing.JLabel">
             <constraints>
               <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
@@ -379,6 +368,25 @@
               <gridColor color="-16777216"/>
             </properties>
           </component>
+          <scrollpane id="b149f" binding="itemsDueScrollPane">
+            <constraints>
+              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                <minimum-size width="600" height="250"/>
+                <preferred-size width="600" height="250"/>
+              </grid>
+            </constraints>
+            <properties/>
+            <border type="none"/>
+            <children>
+              <component id="e1abf" class="javax.swing.JTable" binding="itemsDue" custom-create="true">
+                <constraints/>
+                <properties>
+                  <fillsViewportHeight value="false"/>
+                  <gridColor color="-16777216"/>
+                </properties>
+              </component>
+            </children>
+          </scrollpane>
         </children>
       </grid>
     </children>
