--- a/Capstone/src/ui/AddItemDialog.form
+++ b/Capstone/src/ui/AddItemDialog.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="AddItemDialog">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="ui.AddItemDialog">
   <grid id="cbd77" binding="contentPane" layout-manager="GridLayoutManager" row-count="4" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="30" left="30" bottom="30" right="30"/>
     <constraints>
@@ -59,7 +59,7 @@
             </constraints>
             <properties>
               <font size="28" style="1"/>
-              <text value="Add Item"/>
+              <text value="Add classes.Item"/>
             </properties>
           </component>
           <component id="3cb" class="javax.swing.JTextField" binding="itemNameField">
@@ -75,7 +75,7 @@
               <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Item Name:"/>
+              <text value="classes.Item Name:"/>
             </properties>
           </component>
           <component id="f347d" class="javax.swing.JLabel">
@@ -83,7 +83,7 @@
               <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Consignor Name:"/>
+              <text value="classes.Consignor Name:"/>
             </properties>
           </component>
           <component id="60b" class="javax.swing.JLabel">
@@ -181,7 +181,7 @@
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Perishable"/>
+          <text value="classes.Perishable"/>
         </properties>
       </component>
       <component id="5b171" class="javax.swing.JRadioButton" binding="nonPerishableRadioButton" default-binding="true">
