--- a/Capstone/src/ui/LogInForm.form
+++ b/Capstone/src/ui/LogInForm.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="LogInForm">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="ui.LogInForm">
   <grid id="fe7d8" binding="LogInPanel" layout-manager="GridBagLayout">
     <constraints>
       <xy x="20" y="20" width="1105" height="778"/>
