--- a/Capstone/src/ui/MainProgram.form
+++ b/Capstone/src/ui/MainProgram.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="MainProgram">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="ui.MainProgram">
   <grid id="27dc6" binding="panelMain" layout-manager="BorderLayout" hgap="0" vgap="0">
     <constraints>
       <xy x="3" y="5" width="1049" height="659"/>
