--- a/Capstone/src/ui/PayoutsPanel.form
+++ b/Capstone/src/ui/PayoutsPanel.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="PayoutsPanel">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="ui.PayoutsPanel">
   <grid id="27dc6" binding="content" layout-manager="GridBagLayout">
     <constraints>
       <xy x="20" y="20" width="896" height="681"/>
@@ -17,7 +17,7 @@
         </constraints>
         <properties>
           <font size="28" style="1"/>
-          <text value="Payout"/>
+          <text value="classes.Payout"/>
         </properties>
       </component>
       <component id="93f6e" class="javax.swing.JTextField" binding="Search" custom-create="true">
@@ -122,7 +122,7 @@
                 <properties>
                   <background color="-13726737"/>
                   <foreground color="-854793"/>
-                  <text value="Total Payout   "/>
+                  <text value="Total classes.Payout   "/>
                 </properties>
               </component>
             </children>
@@ -153,7 +153,7 @@
                 <properties>
                   <background color="-13726737"/>
                   <foreground color="-854793"/>
-                  <text value="Pending Payout"/>
+                  <text value="Pending classes.Payout"/>
                 </properties>
               </component>
               <component id="bc08a" class="javax.swing.JLabel" binding="PendingNum">
