--- a/Capstone/src/ui/InventoryPanel.form
+++ b/Capstone/src/ui/InventoryPanel.form
@@ -5,7 +5,10 @@
     <constraints>
       <xy x="20" y="20" width="588" height="400"/>
     </constraints>
-    <properties/>
+    <properties>
+      <background color="-1118482"/>
+      <preferredSize width="600" height="600"/>
+    </properties>
     <border type="none"/>
     <children>
       <component id="e8105" class="javax.swing.JLabel">
