--- a/Capstone/src/ui/AddItemDialog.form
+++ b/Capstone/src/ui/AddItemDialog.form
@@ -75,7 +75,7 @@
               <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="classes.Item Name:"/>
+              <text value="Item Name:"/>
             </properties>
           </component>
           <component id="f347d" class="javax.swing.JLabel">
@@ -83,7 +83,7 @@
               <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="classes.Consignor Name:"/>
+              <text value="Consignor Name:"/>
             </properties>
           </component>
           <component id="60b" class="javax.swing.JLabel">
@@ -147,7 +147,7 @@
               <grid row="7" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Days to Sell"/>
+              <text value="Days to Sell:"/>
             </properties>
           </component>
           <component id="17be4" class="javax.swing.JTextField" binding="daysToSellField">
@@ -181,7 +181,7 @@
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="classes.Perishable"/>
+          <text value="Perishable"/>
         </properties>
       </component>
       <component id="5b171" class="javax.swing.JRadioButton" binding="nonPerishableRadioButton" default-binding="true">
